--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -19,10 +19,8 @@ jobs:
       packages: write
 
     steps:
-      - name: Checkout frontend repository
+      - name: Checkout repository
         uses: actions/checkout@v4
-        with:
-          path: frontend
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
