--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -8,107 +8,168 @@ on:
     branches: [ main ]
 
 env:
-  REGISTRY: docker.io
-  IMAGE_NAME: mick2019/${{ github.event.repository.name }}
+  # 定义两个仓库的地址
+  GITHUB_REGISTRY: ghcr.io
+  DOCKERHUB_REGISTRY: docker.io
+  # 定义镜像名，GitHub的用原样，Docker Hub的用自定义前缀
+  GITHUB_IMAGE_NAME: ${{ github.repository }}
+  DOCKERHUB_IMAGE_NAME: mick2019/${{ github.event.repository.name }}
 
 jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
       contents: read
+      # 这个权限允许推送包到 ghcr.io
       packages: write
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+    - name: Checkout frontend repository
+      uses: actions/checkout@v4
+      with:
+        path: frontend
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-          cache: 'npm'
-          cache-dependency-path: frontend/package-lock.json
+    - name: Checkout backend repository
+      uses: actions/checkout@v4
+      with:
+        repository: fish2018/pansou
+        path: backend
+        # 如果后端仓库是私有的，需要配置token
+        # token: ${{ secrets.BACKEND_REPO_TOKEN }}
 
-      - name: Set up Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: '1.21'
-          cache-dependency-path: backend/go.sum
+    - name: Set up Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '18'
+        cache: 'npm'
+        cache-dependency-path: frontend/package-lock.json
 
-      - name: Cache Node.js modules
-        uses: actions/cache@v4
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('frontend/package-lock.json') }}
+    - name: Set up Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: '1.21'
+        cache-dependency-path: backend/go.sum
 
-      - name: Cache Go modules
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cache/go-build
-            ~/go/pkg/mod
-          key: ${{ runner.os }}-go-${{ hashFiles('backend/go.sum') }}
+    - name: Install frontend dependencies
+      working-directory: frontend
+      run: npm ci
 
-      - name: Install and build frontend
-        working-directory: frontend
-        run: |
-          npm ci
-          npm run build
-          ls -la dist/
+    - name: Build frontend
+      working-directory: frontend
+      run: |
+        npm run build
+        ls -la dist/
 
-      - name: Install and build backend
-        working-directory: backend
-        run: |
-          go mod download
-          CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -a -installsuffix cgo -o pansou-amd64 .
-          CGO_ENABLED=0 GOOS=linux GOARCH=arm64 go build -a -installsuffix cgo -o pansou-arm64 .
-          chmod +x pansou-*
+    - name: Install backend dependencies
+      working-directory: backend
+      run: go mod download
 
-      - name: Prepare build context
-        run: |
-          mkdir -p build-context
-          cp -r frontend/dist build-context/frontend-dist
-          cp backend/pansou-amd64 build-context/
-          cp backend/pansou-arm64 build-context/
-          cp frontend/Dockerfile build-context/
-          cp frontend/start.sh build-context/
-          chmod +x build-context/start.sh
+    - name: Build backend for multiple architectures
+      working-directory: backend
+      run: |
+        # 构建 AMD64 版本
+        CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -a -installsuffix cgo -o pansou-amd64 .
+        # 构建 ARM64 版本
+        CGO_ENABLED=0 GOOS=linux GOARCH=arm64 go build -a -installsuffix cgo -o pansou-arm64 .
+        chmod +x pansou-*
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+    - name: Prepare build context
+      run: |
+        mkdir -p build-context
+        # 复制前端构建产物
+        cp -r frontend/dist build-context/frontend-dist
+        # 复制后端二进制文件 (多架构)
+        cp backend/pansou-amd64 build-context/
+        cp backend/pansou-arm64 build-context/
+        # 复制Docker相关文件
+        cp frontend/Dockerfile build-context/
+        cp frontend/start.sh build-context/
+        chmod +x build-context/start.sh
 
-      - name: Log in to Docker Hub
-        if: github.event_name != 'pull_request'
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
 
-      - name: Extract metadata
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          tags: |
-            type=ref,event=branch
-            type=ref,event=pr
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{major}}
-            type=raw,value=latest,enable={{is_default_branch}}
-            type=sha
+    # ===================================================================
+    # 第一部分：推送到 GitHub Container Registry (ghcr.io)
+    # ===================================================================
+    - name: Log in to GitHub Container Registry
+      if: github.event_name != 'pull_request'
+      uses: docker/login-action@v3
+      with:
+        registry: ${{ env.GITHUB_REGISTRY }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: build-context
-          platforms: linux/amd64,linux/arm64
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-          build-args: |
-            BUILDTIME=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.created'] }}
-            VERSION=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}
-            REVISION=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.revision'] }}
+    - name: Extract metadata for GitHub Container Registry
+      id: meta_ghcr
+      if: github.event_name != 'pull_request'
+      uses: docker/metadata-action@v5
+      with:
+        images: ${{ env.GITHUB_REGISTRY }}/${{ env.GITHUB_IMAGE_NAME }}
+        tags: |
+          type=ref,event=branch
+          type=ref,event=pr
+          type=semver,pattern={{version}}
+          type=semver,pattern={{major}}.{{minor}}
+          type=semver,pattern={{major}}
+          type=raw,value=latest,enable={{is_default_branch}}
+          type=sha,prefix=sha-
+
+    - name: Build and push to GitHub Container Registry
+      if: github.event_name != 'pull_request'
+      uses: docker/build-push-action@v5
+      with:
+        context: build-context
+        platforms: linux/amd64,linux/arm64
+        push: true
+        tags: ${{ steps.meta_ghcr.outputs.tags }}
+        labels: ${{ steps.meta_ghcr.outputs.labels }}
+        build-args: |
+          BUILDTIME=${{ fromJSON(steps.meta_ghcr.outputs.json).labels['org.opencontainers.image.created'] }}
+          VERSION=${{ fromJSON(steps.meta_ghcr.outputs.json).labels['org.opencontainers.image.version'] }}
+          REVISION=${{ fromJSON(steps.meta_ghcr.outputs.json).labels['org.opencontainers.image.revision'] }}
+        # 添加缓存，加速后续构建
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
+
+    # ===================================================================
+    # 第二部分：推送到 Docker Hub
+    # ===================================================================
+    - name: Log in to Docker Hub
+      if: github.event_name != 'pull_request'
+      uses: docker/login-action@v3
+      with:
+        registry: ${{ env.DOCKERHUB_REGISTRY }}
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+    - name: Extract metadata for Docker Hub
+      id: meta_dockerhub
+      if: github.event_name != 'pull_request'
+      uses: docker/metadata-action@v5
+      with:
+        images: ${{ env.DOCKERHUB_REGISTRY }}/${{ env.DOCKERHUB_IMAGE_NAME }}
+        tags: |
+          type=ref,event=branch
+          type=ref,event=pr
+          type=semver,pattern={{version}}
+          type=semver,pattern={{major}}.{{minor}}
+          type=semver,pattern={{major}}
+          type=raw,value=latest,enable={{is_default_branch}}
+          type=sha,prefix=sha-
+
+    - name: Build and push to Docker Hub
+      if: github.event_name != 'pull_request'
+      uses: docker/build-push-action@v5
+      with:
+        context: build-context
+        platforms: linux/amd64,linux/arm64
+        push: true
+        tags: ${{ steps.meta_dockerhub.outputs.tags }}
+        labels: ${{ steps.meta_dockerhub.outputs.labels }}
+        build-args: |
+          BUILDTIME=${{ fromJSON(steps.meta_dockerhub.outputs.json).labels['org.opencontainers.image.created'] }}
+          VERSION=${{ fromJSON(steps.meta_dockerhub.outputs.json).labels['org.opencontainers.image.version'] }}
+          REVISION=${{ fromJSON(steps.meta_dockerhub.outputs.json).labels['org.opencontainers.image.revision'] }}
+        # 利用上一步构建的缓存，避免重复构建
+        cache-from: type=gha
